ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: k8s-program
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1/songs/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: songs-ms-service
            port:
              number: 8080
      - path: /api/v1/resources/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: resources-ms-service
            port:
              number: 8080
